--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,5 +9,12 @@ Description: More about what it does (maybe more than one line)
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
+Imports:
+    devtools,
+    httr,
+    jsonlite,
+    rvest,
+    tidyr,
+    xml2
 Suggests: testthat
 RoxygenNote: 6.0.1
