add data function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,3 +11,4 @@ importFrom(httr,content)
 importFrom(httr,parse_url)
 importFrom(jsonlite,fromJSON)
 importFrom(tidyr,unnest)
+importFrom(utils,data)
