# warning messages and adjust for case of zero results

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,15 @@ export(get_everything)
 export(get_headlines)
 export(get_sources)
 export(set_api_key)
+importFrom(devtools,use_data)
 importFrom(httr,GET)
 importFrom(httr,add_headers)
 importFrom(httr,build_url)
 importFrom(httr,content)
 importFrom(httr,parse_url)
 importFrom(jsonlite,fromJSON)
+importFrom(rvest,html_nodes)
+importFrom(rvest,html_text)
 importFrom(tidyr,unnest)
 importFrom(utils,data)
+importFrom(xml2,read_html)
