--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(get_everything)
 export(get_headlines)
+export(get_headlines_all)
 export(get_sources)
 export(set_api_key)
 importFrom(httr,GET)
