--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ importFrom(httr,build_url)
 importFrom(httr,content)
 importFrom(httr,parse_url)
 importFrom(jsonlite,fromJSON)
+importFrom(lubridate,parse_date_time)
 importFrom(tidyr,unnest)
 importFrom(utils,data)
