--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ Suggests:
     stringr,
     testthat,
     mockery,
-    tidytext
+    tidytext,
+    textdata
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
